fix: ajustar controle de overflow na seção de home para melhor exibição

--- a/static/css/style-critical.scss
+++ b/static/css/style-critical.scss
@@ -9374,3 +9374,6 @@ html, body {
 #single-product, .js-home-sections-container {
   overflow-x: hidden !important;
 }
+.js-home-sections-container .swiper-container {
+  overflow: visible !important;
+}
